# fleetr

./: .gitignore  Cargo.toml  README.md  justfile
nix/modules/: devshell.nix  rust.nix
src/: main.rs
