[package]
authors = ["Mozart409 <amadeus@mozart409.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "fleetr"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
toml = "0.8.19"
toml_edit = "0.22.22"
serde = { version = "1", features = ["derive"] }
